--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <!-- adjust font size of our quotes -->
             <i class="fas fa-quote-left">
                 <span id="quote">
-                    What you are is what you have been. What you'll be is what you do now.
+                    
                 </span>
             </i>
         </div>
         <!-- Author -->
         <div class="quote-author">
-            <span id="author">Buddha</span>
+            <span id="author"></span>
         </div>
             <!-- Buttons -->
     <div class="button-container">
