--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
     </div>
     </div>
 
+    <!-- Loader -->
+    <div class="loader" id="loader">
+        
+    </div>
     <!-- Script -->
     <script src="quotes.js"></script>
     <script src="script.js"></script>
